Pagina totalmente estructura, aun sin contenido

--- a/bottomUp.html
+++ b/bottomUp.html
@@ -36,10 +36,15 @@
           <li class="nav-item">
             <a class="nav-link" style="color:#97CADB" href="aboutDotH.html">Sobre nosotros</a>
           </li>
-          <li class="nav-item dropdown">
-          </li>
         </ul>
         </div>
         </nav>
+
+        <div class="container mt-3">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label" style="color: #001b48;">Numero de estaciones:   </label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="#Numero estaciones">
+            </div>
+        </div>
   </body>
 </html>
