--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico"
+    ><link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/gif" href="img/animated_favicon1.gif">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Lineas de producción</title>
 </head>
 <body style = "background-color: #97CADB;">
-    <!--Barra de navegacion sin editar-->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #001B48;">
-      <a class="navbar-brand" href="aboutDotH.html" style="color:#97CADB">Equipo .h</a>
+      <a class="navbar-brand" href="#" style="color:#97CADB">Equipo .h</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,8 +25,16 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html" style="color:#97CADB">Introduccion<span class="sr-only">(current)</span></a>
           </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="topDown.html" style="color:#97CADB">Top-down<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="bottomUp.html" style="color:#97CADB">Bottom-up<span class="sr-only">(current)</span></a>
+          </li>
+
           <li class="nav-item">
-            <a class="nav-link" style="color:#97CADB" href="#">Sobre nosotros</a>
+            <a class="nav-link" style="color:#97CADB" href="aboutDotH.html">Sobre nosotros</a>
           </li>
           <li class="nav-item dropdown">
           </li>
@@ -35,7 +43,7 @@
         </nav>
 
     <div class = 'container-fluid' style="background-color:#97CADB;">
-        <h2 style="color: #02457A; text-align: center; margin-top: 0.5cm;">Introduccion al problema de líneas de producción</h2>
+        <h2 style="color: #02457A; text-align: center; margin-top: 0.5cm;"><strong>Introduccion al problema de líneas de producción</strong></h2>
         
         <div class="container" style="color: #02457A; justify-content: baseline; margin-top: 1cm;">
           <p style="color: #02457A;">El problema en esencia dicta que:</p>
@@ -46,6 +54,17 @@
             <li>Continuar en la misma línea no tiene ningún costo adicional, pero la transferencia de línea de montaje tiene un tiempo de entrada e[i] y un tiempo de salida x[i] que pueden ser diferentes para las dos lineas. Proporcione un algoritmo para calcular el tiempo mínimo que se necesitará para construir un chasis de automóvil.</li>
           </ul>
           <p style ="text-align:center"><img src="assets/lineasProduccionBase.png"></p>
+          <h2 style="color: #02457A; text-align: center; margin-top: 1cm;"><strong>Parametros esenciales</strong></h2>
+          <ul style="text-align: justify;">
+          <p style="color: #02457A;">Los parametros esenciales que contempla nuestro problema son:</p>
+            <li>Fabrica de <strong>n</strong> estaciones</li>
+            <li><strong>S[i,j]:</strong> i es la línea de montaje, j es la estación de trabajo.</li>
+            <li><strong>a[i,j]</strong>: tiempo requerido en la estacion</li>
+            <li><strong>e[i]</strong>: tiempo de entrada del producto, en este caso i solo puede ser 1 o 2</li>
+            <li><strong>x[i]</strong>: tiempo de salido de la línea, en este caso i sólo puede ser 1 o 2.</li>
+            <li><strong>t[i,j]</strong>: tiempo para pasar de la estación S[i,j] a la otra línea de montaje</li>
+          </ul>
+          
         </div>
 
         <!--
@@ -68,13 +87,5 @@
         </div>
   
         -->
-
-        <code>
-          <p>#include main.h</p>
-          <p>int main(){</p>
-          <p>printf("Hola mundo. .  .")</p>
-          <p>return 0;</p>
-          <p>}</p>
-        </code>
       </body>
 </html>
