--- a/bottomUp.html
+++ b/bottomUp.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Lineas de producción</title>
+
 </head>
-<body style = "background-color: #97CADB;">
+<body style="background-color: #018ABE;"">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #001B48;">
       <a class="navbar-brand" href="#" style="color:#97CADB">Equipo .h</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
@@ -41,10 +42,26 @@
         </nav>
 
         <div class="container mt-3">
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label" style="color: #001b48;">Numero de estaciones:   </label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="#Numero estaciones">
-            </div>
+          
+      <h1 style="text-align: center;"><strong>Solución Botton-Up</strong></h1>
+      <p style="text-align: justify;">En esta sección les hablaremos de la solución Botton-Up la cual va de abajo hacia arriba.</p>
+      <p style="text-align: justify;">Para poder encontrar esta solución lo que primero haremos es definir nuestros casos base(Sub problemas mas
+        pequeños)</p>
+
+      <h2 style="text-align: center;"><strong>Caso base</strong></h2>
+      <p style="text-align: justify;">En este caso se definen los casos base como funciones, la primera función hace referencia a cuando el chasis o
+        materia prima, entra en la linea de producción mientras que la siguiente condición nos indica cuando esta dentro
+        de la linea de producción </p>
+      <p style="text-align: center;"><img src="./img/Caso_base_botton_up.PNG" alt="" class="img-btn-up-cond"></p>
+
+      <p>Código representativo de la condición 1</p>
+      <p style="text-align: center;"><img src="./img/Cod_cas_b1_btn.PNG" alt="" class="codigo"></p>
+
+      <p>Código representativo de la condición 2</p>
+      <p style="text-align: center;"><img src="./img/Cod_cas_b2_btn.PNG" alt="" class="codigo"></p>
+
+      <h2>Código de la implementación Botton-Up</h2>
+      <p style="text-align: center;"><img src="./img/Cod_btn_up.PNG" alt="" class="codigo"></p>
         </div>
   </body>
 </html>
