--- a/aboutDotH.html
+++ b/aboutDotH.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Lineas de producción</title>
 </head>
-<body style = "background-color: #97CADB;">
+<body  style="background-color: #018ABE;">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #001B48;">
       <a class="navbar-brand" href="#" style="color:#97CADB">Equipo .h</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
@@ -39,7 +39,28 @@
           <li class="nav-item dropdown">
           </li>
         </ul>
-        </div>
+        </div>  
         </nav>
+
+        <div class="container">
+          <h2 style="text-align: center;"><strong>Contactos de búsqueda</strong></h1>
+  
+          <div class="mt-3">
+            <strong>Nombre: Roa Cruz Norman Ricardo</strong><br>
+            Telegram: <br>
+          </div>
+          <div class="cont-part">
+            <strong>Rodríguez Alvarado Gustavo Adrián</strong> <br>
+            Telegram: <br>
+          </div>
+          <div class="cont-part">
+            <strong>Nombre: Rodríguez Gómez Andrés</strong><br>
+            Telegram: <br>
+          </div>
+          <div class="cont-part">
+            <strong> Rodríguez Ramírez Sergio</strong><br>
+            Telegram: <br>
+          </div>
+        </div>
   </body>
 </html>
