Animacion Bottom-up agregada

--- a/aboutDotH.html
+++ b/aboutDotH.html
@@ -32,6 +32,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="bottomUp.html" style="color:#97CADB">Bottom-up<span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="bottomUpAnim.html" style="color:#97CADB">Animacion Bottom-up<span class="sr-only">(current)</span></a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" style="color:#97CADB" href="aboutDotH.html">Sobre nosotros</a>
